# corpora-atlas

./: Cargo.toml  README.md
.github/workflows/: release.yml
docs/: README.md  backends.md  cli.md  config.md  daemon.md
src/: cli.rs  config.rs  error.rs  lang.rs  lib.rs  main.rs  state.rs  strip.rs  tokens.rs
src/backends/: aard2.rs  gd.rs  kiwix.rs  mediawiki.rs  mod.rs
src/daemon/: clipboard.rs  cycle.rs  gd_clip.rs  ipc.rs  mod.rs
src/html/: lean.rs  mod.rs  strip.rs
tests/: integration_test.rs
tests/fixtures/: config.yaml.example
